--- a/2021-11-26_Tisza/tiszato.html
+++ b/2021-11-26_Tisza/tiszato.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bootstrap.min.css">
   <script src="jquery.min.js"></script>
   <script src="popper.min.js"></script>
-  <script src="bootstrap.min.js"></script>  
+  <script src="bootstrap.min.js"></script> 
+  <script src="tiszato.js"></script> 
+  <link rel="stylesheet" href="tiszato.css">
+  <title>Tisza-tó</title>
 </head>
 <body>
 
